# rusty-refactor

./: .eslintrc.js  .gitignore  .npmrc  .vscodeignore  AI_DOCUMENTATION_TROUBLESHOOTING.md  BUILD.md  CHANGELOG.md  COMMIT_MSG.md  GETTING_STARTED.md  MODULAR_ARCHITECTURE.md  Makefile  PUBLISHING.md  README.md  REFACTORING_FIXES.md  RUST_COMPILER_BRIDGE.md  RUST_SETUP.md  SYMBOL_MATCHING_IMPLEMENTATION.md  build.bat  build.ps1  package-lock.json  package.json  rebuild-and-check.ps1  requirements-spotless.md  requirements.md  rsbuild.config.ts  tsconfig.json
.github/actions/rustyroad-publish/: action.yml
.github/workflows/: publish-old.yml  publish.yml
examples/: models.rs  sample.rs
rust-backend/: Cargo.toml  build.rs
rust-backend/napi_bridge/: Cargo.toml
rust-backend/napi_bridge/src/: lib.rs
rust-backend/src/: cache.rs  lib.rs  main.rs  name_resolution.rs
rust-backend/src/models/: get_functions.rs  mod.rs
src/: AnalyzeRustCodeTool.ts  ExtractToModuleTool.ts  IAnalyzeRustCodeParameters.ts  IExtractToModuleParameters.ts  RefactorFileTool.ts  aiDocGenerator.ts  analyzer.ts  codeAnalyzer.ts  extension.ts  extractor.ts  fileSearchProvider.ts  hoverProvider.ts  implContextDetector.ts  languageModelTools.ts  moduleRegistry.ts  nativeBridge.ts  rustAnalyzerIntegration.ts  rustCodeParser.ts  rustCompilerBridge.ts  symbolExpander.ts  utils.ts
src/models/: user.rs
src/test/: manual-test-symbol-matching.md
src/webview/: ModuleExtractorPanel.ts  main.js  styles.css
webview-src/: tsconfig.json
webview-src/module-extractor/: index.ts  styles.css
(+1 files in other folders)
