[package]
name = "rusty_refactor_worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "rusty_refactor_worker_lib"

[[bin]]
name = "rusty_refactor_worker_bin"
path = "src/main.rs"

[dependencies]
# N-API bindings for Node.js integration
napi = { version = "2.14", features = ["full"] }
napi-derive = "2.14"

# Performance and concurrency
rayon = "1.8"
memmap2 = "0.9"
dashmap = "5.5"
parking_lot = "0.12"
once_cell = "1.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
postcard = "1.0"

# Compression
zstd = "0.13"

# Text processing and SIMD
regex = "1.10"
bstr = "1.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cargo and project analysis
cargo = "0.76"
toml = "0.8"
semver = "1.0"

# File system and I/O
tempfile = "3.8"

# Build dependencies
[build-dependencies]
napi-build = "2.1"
